--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+
+* {
+  font-family: "Montserrat", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.h-screen {
+  height: 100vh;
+}
+
+.bg-primary {
+  background-color: #171717 !important;
+}
+
+.bg-white {
+  background-color: #fff !important;
+}
+
+.w-400 {
+  width: 400px !important;
+}
+input, select ,
+textarea {
+  border: 1px solid gray !important;
+  width: 100% !important;
+  padding: 8px 20px;
+}
+input:focus,
+textarea:focus {
+  outline: none !important;
+  border: 1px solid #171717 !important;
+}
+textarea {
+  min-height: 250px !important;
+  max-height: 1000px !important;
+}
+
+.primary-contained-btn {
+  background-color: #171717 !important;
+  border-radius: 0 !important;
+  height: 40px;
+  color: white !important;
+  text-transform: uppercase !important;
+  padding: 0 20px !important;
+  margin-right:5px;
+  margin-top:10px;
+}
+.primary-outlined-btn {
+  border: 1px solid #171717 !important;
+  border-radius: 0 !important;
+  height: 40px;
+  color: #171717 !important;
+  text-transform: uppercase !important;
+  background-color: white;
+  padding: 0 20px !important;
+  margin-top:10px;
+}
+
+.ant-form-iten {
+  margin-bottom: 10px !important;
+}
+a {
+  color: #171717 !important;
+  text-decoration: none;
 }
